# pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "image-flow"
version = "0.0.1"
dependencies = [
    "matplotlib>=3.7.2",
    "numpy>=1.25.2",
    "opencv-python>=4.8.0.76",
    "pandas>=2.0.3",
    "tqdm>=4.66.1",
    "ultralytics>=8.0.153",
    'importlib-metadata; python_version>"3.11"',
]